nova_tests/plan118/neg/plan118_1_addr_chains_t8_neg_amp_call_field_chain.nv
// Plan 118.1 [M-118.1-addr-of-chains] — bare `&make().field` (parser path) must
// reject a call-rooted field chain, identically to `addr_of(make().field)`.
// This locks the parser arm (parser/mod.rs), which fires at PARSE time (the
// addr_of intrinsic path fires later, in the const-fn rewrite pass).
// EXPECT_COMPILE_ERROR E_ADDR_OF_NON_LVALUE
module neg.plan118_1_addr_chains_t8_neg_amp_call_field_chain

type Sv {
    ro v i64
}

fn make() -> Sv {
    ro s = Sv { v: 1 }
    s
}

test "bare & of a field on a call result is rejected" {
    unsafe {
        ro p = &make().v
    }
}
